# excavator

./: LICENSE  docker-compose.yml  pyproject.toml  schema.sql  scrapy.cfg
cagr/: items.py  middlewares.py  pipelines.py  settings.py
cagr/spiders/: campi.py  classes.py
